# pyurlcheck

./: .flake8  .gitignore  .pydocstyle.ini  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
.github/: CODEOWNERS
.github/workflows/: basics.yml
pyurlcheck/: __init__.py  check.py  cli.py  constants.py  find.py  utils.py  validate.py
pyurlcheck/examples/: example1.md  example2.md  example3.md
tests/: test_check.py  test_find.py  test_pyurlcheck.py  test_validate.py
tests/examples/: example2.md  example3.md  example3.txt  example4.rst
