[tool.poetry]
name = "pyurlcheck"
version = "0.1.0"
description = "Search docs and validate URLs found are working properly."
authors = ["Jeff Kala <jeff.l.kala@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/jeffkala/pyurlcheck.git"
repository = "https://github.com/jeffkala/pyurlcheck.git"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
pyurlcheck = "pyurlcheck.cli:main"

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.1"
invoke = "^1.5.0"
bandit = "^1.7.0"
pydocstyle = "^6.0.0"
pylint = "^2.7.4"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """,
    line-too-long,
    bad-continuation,
    too-few-public-methods,
    duplicate-code,
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """